Fix z-index

--- a/game/src/ClickArea.css
+++ b/game/src/ClickArea.css
@@ -4,4 +4,6 @@
   border-radius: 100%;
   background: orange;
   margin: 50px auto 0;
+  z-index: 1;
+  user-select: none;
 }
