--- a/game/src/FlyingClick.css
+++ b/game/src/FlyingClick.css
@@ -3,8 +3,9 @@
   height: 50px;
   background: yellow;
   position: absolute;
-  z-index: 1000;
+  z-index: -10;
   border-radius: 100%;
+  user-select: none;
 }
 
 .flying-click {
